--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -43,6 +43,13 @@
   -o-border-radius: 12px;
   border-color: gold;
 }
+.respon{
+  flex-wrap: wrap;
+}
+.igual{
+  height: auto !important;
+  width: 100% !important;
+}
 .btn{
   border-radius: 10px !important;
   -webkit-border-radius: 10px !important;
